# learning-ml

./: .gitignore  Chapter2.ipynb  Dockerfile  README.md  behavior_agent.py  cleanup_db.py  demo_shap_explainability.py  docker-compose.yml  explain.py  fairness.py  main.py  processor.py  pyproject.toml  requirements.txt  scoring.py  simulator.py  smoothness_model.joblib  telemetry.db  test_api.py  trainer.py
.agent/skills/behavioral_xai/: SKILL.md
.github/workflows/: ci.yml
docs/: FEATURE_ENGINEERING.md  MLOPS_GUIDE.md  SHAP_EXPLAINABILITY.md  SHAP_QUICK_REFERENCE.md  ml_pipeline_guide.md  strategy.md  walkthrough.md
mlruns/tracedata-smoothness-scoring/0289bf3e037748c791f7/: run.json
reports/: metadata.json
src/agents/: behavior_agent.py
src/agents/behavior/: agent.py  tasks.py
src/core/: celery_app.py  config.py  experiment_tracker.py  smoothness_ml_engine.py
src/mlops/: training_pipeline.py
src/utils/: trainer.py
tracedata-candidate/: CONCEPTS_EXPLAINED.md  DIAGRAM_INDEX.md  GETTING_STARTED.md  NAVIGATION_GUIDE.md  ORGANIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  VISUAL_ENHANCEMENTS.md
tracedata-candidate/config/: mlops_config.yaml
tracedata-candidate/docs/: ARCHITECTURE.md  DATA_FLOW.md  FEATURE_ENGINEERING.md  MLOPS_GUIDE.md  SHAP_EXPLAINABILITY.md
tracedata-candidate/src/mlops/: __init__.py  training_pipeline.py
