[project]
name = "learning-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aif360>=0.6.1",
    "fastapi>=0.135.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]
